# tox-pipenv

./: HISTORY.md  MANIFEST.in  README.md  index.html  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/source/: conf.py  index.md
test/: conftest.py
test/integration/: conftest.py  data.py  test_integration.py
test/unit/: conftest.py  test_addoption.py  test_configure.py  test_pipenv_env.py  test_plugin.py  test_runenvreport.py  test_testenv_create.py  test_testenv_install_deps.py
tox_pipenv/: __init__.py  plugin.py
v2.0.0a4/: .buildinfo  .commit  genindex.html  index.html  objects.inv  search.html  searchindex.js
v2.0.0a4/.doctrees/: environment.pickle  index.doctree
v2.0.0a4/_static/: documentation_options.js
v2.0.0a5/: .buildinfo  .commit  genindex.html  index.html  objects.inv  search.html  searchindex.js
v2.0.0a5/.doctrees/: environment.pickle  index.doctree
v2.0.0a5/_static/: documentation_options.js
