[build-system]
requires = [
    "setuptools >= 40.0.4",
    "wheel >= 0.29.0",
    "setuptools_scm[toml]>=3.4",
]
build-backend = 'setuptools.build_meta'

[project]
name = "tox-pipenv"
description = "A pipenv plugin for tox"
authors = [
    {name = "Masen Furer", email = "m_github@0x26.net"},
    {name = "Anthony Shaw", email = "anthony.p.shaw@gmail.com"},
]
dependencies = [
    'tox>=3.0.0',
    'pipenv>=2018.05.18',
]
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS :: MacOS X',
    'Topic :: Software Development :: Testing',
    'Topic :: Software Development :: Libraries',
    'Topic :: Utilities',
    'Programming Language :: Python',
]
dynamic = ["version", "readme"]

[project.entry-points.tox]
pipenv = "tox_pipenv.plugin"

[project.urls]
homepage = "https://github.com/tox-dev/tox-pipenv"

[tool.setuptools]
platforms = ['unix', 'linux', 'osx', 'cygwin', 'win32']

[tool.setuptools.dynamic.readme]
file = ["README.md", "HISTORY.md"]
content-type = "text/markdown"

[tool.setuptools_scm]